--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -135,7 +135,11 @@
     </div>
     <div>
 
-        <app-note *ngFor="let note of getTrash()" [note]="note"></app-note>
-        <app-note *ngFor="let note of getList()" [note]="note"></app-note>
+        @if(status == "trash") {
+            <app-note *ngFor="let note of getTrash()" [note]="note"></app-note>
+        } @else if(status == "notes") {
+            <app-note *ngFor="let note of getList()" [note]="note"></app-note>
+        }
+
     </div>
 </div>
